--- a/Clash-LIAN.ini
+++ b/Clash-LIAN.ini
@@ -2,6 +2,7 @@
 
 ruleset=AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
+ruleset=Apple,https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Clash/Apple/Apple.list
 
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
@@ -9,6 +10,7 @@ ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 
 ruleset=国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
 ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+
 
 
 ruleset=国内,[]FINAL
